# vweb

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  go.mod  go.sum  makefile  readme.md  swagger.yaml
android/: settings.gradle
android/app/: build.gradle  readme.md
android/gradle/wrapper/: gradle-wrapper.properties
api/: swagger.yaml
client/: .gitignore  package-lock.json  package.json
client/src/: App.vue
client/src/components/: HelloWorld.vue  VideoPlayer.vue
cmd/http_server/: server.go
cmd/tcp_writer/: main.go
cmd/webrtc_server/: server.go
cmd/write_to_file/: write.go
internal/debug/player/: file.go
internal/ffmpeg/: error.go  ffmpeg.go  ffmpeg_test.go  interface.go  player.go
internal/ffmpeg/c/: CMakeLists.txt  makefile
internal/ffmpeg/c/include/: stream_reader.h
internal/ffmpeg/c/src/: packet_reader.c  packet_reader.h  test.c
internal/ffmpeg/c/src/test/: print_error.c  test.c
internal/ffmpeg/rust/: Dockerfile
internal/handshake/: handshake.go
internal/image/: image.go
internal/nal/: nal.go
internal/utils/: metered_channel.go  timer.go
internal/vars/: vars.go
pkg/android/: h264_codec_parser.go  media_codec_parser.go  player.go
pkg/endpoints/mobile/: android.go
pkg/endpoints/open/: open.go
pkg/endpoints/ping/: ping.go
pkg/endpoints/play/: open.go  play.go
pkg/utils/: timer.go  utils.go  utils_test.go
pkg/video/: library.go  player.go  reader.go  router.go
rewinder/: .gitignore  build.gradle  readme.md  settings.gradle
rewinder/app/: build.gradle
scripts/: docker_run.sh  gen_docker_ignore.sh
(+37 files in other folders)
